--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,6 +23,7 @@ $black-deep: #341D1A;
 $olive-transparent: rgba(81, 82, 26, 0.2);
 $gray-extra-light: #D9D9D9;
 $yellow-light: #FFF6DE;
+$golden-brown: #C78119;
 
 $bp: (
   sm: 480px,
