--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,5 @@
 @import '../styles/variables';
+@import '../styles/mixins';
 
 html,
 body {
@@ -15,10 +16,7 @@ body {
 }
 
 main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - 105px);
+  @include flex($align: center, $justify: center);
 }
 
 * {
