added form + elements

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,9 @@ $olive-transparent: rgba(81, 82, 26, 0.2);
 $gray-extra-light: #D9D9D9;
 $yellow-light: #FFF6DE;
 $golden-brown: #C78119;
+$dusty-tape: #887C7B;
+$smoked-taupe: #665D5C;
+$iron-taupe: #4D4645;
 
 $bp: (
   sm: 480px,
