--- a/src/features/slots-game/SlotsMachine.module.scss
+++ b/src/features/slots-game/SlotsMachine.module.scss
@@ -1,10 +1,9 @@
-@import '../../styles/mixins';
-
 .container {
   position: relative;
   width: 427px;
   height: 260px;
   overflow: visible;
+  margin-bottom: 20px;
 }
 
 .base {
