--- a/src/features/slots-game/Slots.module.scss
+++ b/src/features/slots-game/Slots.module.scss
@@ -4,3 +4,49 @@
   @include flex($align: center, $justify: center, $direction: column);
   width: 100%;
 }
+
+.clouGreenBackground {
+  position: absolute;
+  background: url('../../assets/images/cloud-green.png');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  bottom: 100px;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+}
+
+.cloudWhiteBackground {
+  position: absolute;
+  background: url('../../assets/images/cloud-2.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  bottom: 0;
+  height: 300px;
+  z-index: 201;
+}
+
+.cloudLeft {
+  position: absolute;
+  background: url('../../assets/images/cloud-1.png');
+  width: 482px;
+  height: 454px;
+  left: 0;
+  bottom: 40px;
+  z-index: 201;
+}
+
+.cloudRight {
+  position: absolute;
+  background: url('../../assets/images/cloud-3.png');
+  width: 482px;
+  height: 454px;
+  right: 0;
+  bottom: 40px;
+  z-index: 201;
+}
+
+
