--- a/src/features/slots-game/Slots.module.scss
+++ b/src/features/slots-game/Slots.module.scss
@@ -6,47 +6,40 @@
 }
 
 .clouGreenBackground {
+  @include size($w: 100%, $h: 100%);
   position: absolute;
   background: url('../../assets/images/cloud-green.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: contain;
   bottom: 100px;
-  width: 100%;
-  height: 100%;
-  z-index: 200;
 }
 
 .cloudWhiteBackground {
+  @include size($w: 100%, $h: 300px);
   position: absolute;
   background: url('../../assets/images/cloud-2.png');
   background-repeat: repeat-x;
   background-size: contain;
   background-position: center;
-  width: 100%;
   bottom: 0;
-  height: 300px;
-  z-index: 201;
+  z-index: 10;
 }
 
 .cloudLeft {
+  @include size($w: 482px, $h: 454px);
   position: absolute;
   background: url('../../assets/images/cloud-1.png');
-  width: 482px;
-  height: 454px;
   left: 0;
   bottom: 40px;
-  z-index: 201;
 }
 
 .cloudRight {
+  @include size($w: 482px, $h: 454px);
   position: absolute;
   background: url('../../assets/images/cloud-3.png');
-  width: 482px;
-  height: 454px;
   right: 0;
   bottom: 40px;
-  z-index: 201;
 }
 
 
