--- a/src/components/layout/Footer.module.scss
+++ b/src/components/layout/Footer.module.scss
@@ -14,24 +14,6 @@
   bottom: 0;
   transform: translateX(-50%);
   z-index: 1000;
-  width: 410px;
-}
-
-.table_title {
-  @extend %poetsen-55;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  pointer-events: none;
-  white-space: nowrap;
-}
-
-.table {
-  @include flex($align: center, $justify: center);
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1000;
 
   &_title {
     @include text-stroke(10px, $black-dark);
@@ -53,21 +35,15 @@
     right: 45%;
     transform: translate(50%);
   }
+}
 
-  &_inputToken {
-    @include flex($align: center, $justify: center);
-    @include size($w: 24px, $h: 24px);
-    position: absolute;
-    left: 20%;
-    top: 51%;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    background: $red-bright;
-    border: 4px solid $black-dark;
-    box-sizing: content-box;
-    color: $red-dark;
-    font-family: $font-bungee;
-    font-size: 14px;
-    box-shadow: 0 4px 4px $black-dark;
-  }
+.table_shine {
+  position: absolute;
+  left: -100%;
+  top: -8px;
+  width: 200%;
+  height: calc(100% + 16px);
+  background: linear-gradient(115deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.6) 45%, rgba(255,255,255,0) 60%);
+  filter: blur(2px);
+  pointer-events: none;
 }
