--- a/src/features/slots-game/SpinButton.module.scss
+++ b/src/features/slots-game/SpinButton.module.scss
@@ -3,9 +3,8 @@
 @import '../../styles/mixins';
 
 .container {
+  @include size($w: 250px, $h: 140px);
   position: relative;
-  width: 250px;
-  height: 140px;
   border: none;
   background: transparent;
   padding: 0;
@@ -25,7 +24,7 @@
 .border2 {
   position: absolute;
   left: 50%;
-  bottom: 0;
+  bottom: -5px;
   transform: translateX(-50%);
   pointer-events: none;
   z-index: 10;
