--- a/src/components/layout/Footer.module.scss
+++ b/src/components/layout/Footer.module.scss
@@ -13,7 +13,7 @@
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-  z-index: 1000;
+  z-index: 999;
 
   &_title {
     @include text-stroke(10px, $black-dark);
@@ -23,7 +23,7 @@
     transform: translateX(-50%);
     top: -20px;
     color: $yellow-bright;
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 100);
+    text-shadow: 0 4px 4px $black;
   }
 
   &_sum {
@@ -35,15 +35,13 @@
     right: 45%;
     transform: translate(50%);
   }
-}
 
-.table_shine {
-  position: absolute;
-  left: -100%;
-  top: -8px;
-  width: 200%;
-  height: calc(100% + 16px);
-  background: linear-gradient(115deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.6) 45%, rgba(255,255,255,0) 60%);
-  filter: blur(2px);
-  pointer-events: none;
+  &_shine {
+    @include size($w: 200%, $h: calc(100% + 16px));
+    position: absolute;
+    left: -100%;
+    top: -8px;
+    background: $gradient-gloss;
+    filter: blur(2px);
+  }
 }
