--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -23,17 +23,18 @@
   bottom: -40px;
   transform: translate(-50%, 50%);
   display: inline-block;
+  z-index: 999;
 
   &_title {
+    @include text-stroke(5px, $black-dark);
     @extend %pocket-monk-40;
     font-family: var(--font-pocket-monk);
-    @include text-stroke(5px, $black-dark);
     position: absolute;
     left: 0;
     top: 50%;
     width: 100%;
     transform: translateY(-55%);
     paint-order: stroke fill;
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0 4px 4px $black;
   }
 }
