--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $font-pocket-monk: 'Pocket Monk', sans-serif;
 $font-poetsen-one: 'Poetsen One', sans-serif;
 
 /* Colors */
+$black: #000000;
 $background: #DAF3A6;
 $primary: #54C3EE;
 $white: #FFFFFF;
@@ -52,3 +53,10 @@ $radius-lg: 18px;
 $shadow-1: 0 1px 0 rgba(0,0,0,0.08), 0 2px 6px rgba(0,0,0,0.08);
 $shadow-2: 0 2px 0 rgba(0,0,0,0.1), 0 6px 12px rgba(0,0,0,0.12);
 $shadow-3: 0 3px 0 rgba(0,0,0,0.12), 0 10px 20px rgba(0,0,0,0.16);
+
+$gradient-gloss: linear-gradient(
+  115deg,
+  rgba(255,255,255,0) 0%,
+  rgba(255,255,255,0.6) 45%,
+  rgba(255,255,255,0) 60%
+);
