--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -28,6 +28,7 @@ $golden-brown: #C78119;
 $dusty-tape: #887C7B;
 $smoked-taupe: #665D5C;
 $iron-taupe: #4D4645;
+$dark-space: #1B0D38;
 
 $bp: (
   sm: 480px,
