--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,8 @@ $white-light: #FEFEFF;
 $black-dark: #341D1A;
 $black-medium: #515895;
 $red-bright: #F7405E;
+$red-light: #FF0000;
+$red-crimson: #E71E3F;
 $red-dark: #691010;
 $blue-light: #B8D2E4;
 $blue-medium: #5E6D84;
