changed svg slots on real div block

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $red-bright: #F7405E;
 $red-light: #FF0000;
 $red-crimson: #E71E3F;
 $red-dark: #691010;
+$blue-sky: #1EA8DD;
 $blue-light: #B8D2E4;
 $blue-medium: #5E6D84;
 $gray-light: #F4F4F4;
