--- a/src/features/slots-game/SlotsMachine.module.scss
+++ b/src/features/slots-game/SlotsMachine.module.scss
@@ -1,14 +1,31 @@
+@import '../../styles/variables';
+@import '../../styles/extends';
+@import '../../styles/mixins';
+
 .container {
   position: relative;
   width: 427px;
-  height: 260px;
+  height: 262px;
   overflow: visible;
   margin-bottom: 20px;
   z-index: 999;
 }
 
 .base {
-  display: block;
+  @include flex($align: center, $justify: center);
+  @include size($w: 427px, $h: 226px);
+  background: $blue-bright;
+  border-radius: 30px;
+
+  &::after {
+    @include size($w: 427px, $h: 234px);
+    content: '';
+    border: 5px solid $black;
+    position: absolute;
+    border-radius: 35px;
+    background: $blue-sky;
+    z-index: -1;
+  }
 }
 
 .eyeLeft {
@@ -61,18 +78,18 @@
 
 .handLeft {
   position: absolute;
-  left: -2px;
+  left: -10px;
   top: 175px;
 }
 
 .handRight {
   position: absolute;
-  right: -2px;
+  right: -10px;
   top: 175px;
 }
 
 .foots {
   position: absolute;
   left: 10%;
-  bottom: 0px;
+  bottom: -8px;
 }
