--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,4 +1,4 @@
-@import '../styles/mixins';
+@import '../shared/styles/mixins';
 
 .main {
   @include flex($align: flex-start, $justify: space-between, $direction: column);
