--- a/src/components/ui/AdjustInput.module.scss
+++ b/src/components/ui/AdjustInput.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables';
-@import '../../styles/extends';
-@import '../../styles/mixins';
+@import '../../shared/styles/variables';
+@import '../../shared/styles/extends';
+@import '../../shared/styles/mixins';
 
 .wrapper {
   position: relative;
