--- a/src/components/ui/Token.module.scss
+++ b/src/components/ui/Token.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables';
-@import '../../styles/extends';
-@import '../../styles/mixins';
+@import '../../shared/styles/variables';
+@import '../../shared/styles/extends';
+@import '../../shared/styles/mixins';
 
 .inputToken {
   @include flex($align: center, $justify: center);
