--- a/src/features/slots-game/Slots.module.scss
+++ b/src/features/slots-game/Slots.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/mixins';
+@import '../../shared/styles/mixins';
 
 .container {
   @include flex($align: center, $justify: center, $direction: column);
