--- a/src/features/modal/ModalWin.module.scss
+++ b/src/features/modal/ModalWin.module.scss
@@ -8,11 +8,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: url('../../assets/images/umbrella.png');
   background-color: rgba(165, 223, 247, 0.8);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
   z-index: 1000;
 }
 
@@ -22,6 +18,7 @@
   position: relative;
   transform: translateX(50% 50%);
   bottom: 50px;
+  z-index: 1001;
 }
 
 .title {
