--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,10 +1,12 @@
 @import '../shared/styles/variables';
 @import '../shared/styles/mixins';
 
+/* Removed :root CSS variables. Use SCSS variables from shared/styles/_variables.scss */
+
 html,
 body {
-  max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
