--- a/src/features/slots-game/Slots.module.scss
+++ b/src/features/slots-game/Slots.module.scss
@@ -1,6 +1,6 @@
-@import '../../shared/styles/variables';
-@import '../../shared/styles/extends';
-@import '../../shared/styles/mixins';
+@use '@/shared/styles/variables' as *;
+@use '@/shared/styles/extends' as *;
+@use '@/shared/styles/mixins' as *;
 
 .container {
   @include flex($align: center, $justify: space-between, $direction: column);
