--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,6 @@
-@import '../shared/styles/variables';
-@import '../shared/styles/mixins';
+@use '@/shared/styles/variables' as *;
+@use '@/shared/styles/extends' as *;
+@use '@/shared/styles/mixins' as *;
 
 html,
 body {
