--- a/src/features/slots-game/SpinButton.module.scss
+++ b/src/features/slots-game/SpinButton.module.scss
@@ -4,16 +4,19 @@
 
 .container {
   @include flex($align: center, $justify: center, $direction: column);
-  height: 500px;
+  z-index: 2000;
+  background: none;
 }
 
-.bg {
+.button {
   @include size($w: 250px, $h: 140px);
   position: absolute;
   border: none;
   background: transparent;
+  bottom: 200px;
   padding: 0;
   cursor: pointer;
+  z-index: 1999;
 }
 
 .border1 {
@@ -22,7 +25,7 @@
   top: -3px;
   transform: translateX(-50%);
   pointer-events: none;
-  z-index: 10;
+  z-index: 1999;
 }
 
 .border2 {
@@ -31,7 +34,7 @@
   bottom: -31px;
   transform: translateX(-50%);
   pointer-events: none;
-  z-index: -2;
+  z-index: 1999;
 }
 
 .capsuleWrap {
@@ -39,6 +42,6 @@
   left: 0;
   top: 10px;
   display: inline-block;
-  z-index: 800;
+  z-index: 3000;
 }
 
