added fix after core review

--- a/src/features/slots-game/Slots.module.scss
+++ b/src/features/slots-game/Slots.module.scss
@@ -15,7 +15,7 @@
   overflow-x: hidden;
 }
 
-.clouGreenBackground {
+.cloudGreenBackground {
   @include size($w: 100%, $h: 550px);
   position: absolute;
   bottom: 0px;
